<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.tiny</groupId>
  <artifactId>tiny-platform</artifactId>
  <version>1.0.0</version>
  <packaging>pom</packaging>
  <name>tiny-platform</name>
  <description>Tiny Platform - Multi-module platform with applications and infrastructure</description>
    <modules>
    <module>tiny-web</module>
    <module>tiny-oauth-server</module>
    <module>tiny-oauth-client</module>
    <module>tiny-oauth-resource</module>
    <!-- Dictionary modules -->
  </modules>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>21</java.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <maven.compiler.release>21</maven.compiler.release>
    <spring-boot.version>3.5.10</spring-boot.version>
    <spring-cloud.version>2025.0.0</spring-cloud.version>
    <fesod.version>2.0.1-incubating</fesod.version>
  </properties>
  <dependencyManagement>
    <dependencies>
      <!-- Spring Boot 依赖管理 -->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- Spring Cloud BOM -->
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>${spring-cloud.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- problem-spring-web 版本管理 -->
      <dependency>
        <groupId>org.zalando</groupId>
        <artifactId>problem-spring-web-starter</artifactId>
        <version>0.29.1</version>
      </dependency>

      <!-- Dictionary modules 版本管理 -->
      <dependency>
        <groupId>com.tiny</groupId>
        <artifactId>tiny-core</artifactId>
        <version>1.0.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.tiny</groupId>
        <artifactId>tiny-core-dict-starter</artifactId>
        <version>1.0.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.tiny</groupId>
        <artifactId>tiny-core-dict-repository-jpa</artifactId>
        <version>1.0.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.tiny</groupId>
        <artifactId>tiny-core-dict-cache-memory</artifactId>
        <version>1.0.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.tiny</groupId>
        <artifactId>tiny-core-dict-cache-redis</artifactId>
        <version>1.0.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.tiny</groupId>
        <artifactId>tiny-core-dict-web</artifactId>
        <version>1.0.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.tiny</groupId>
        <artifactId>tiny-core-governance</artifactId>
        <version>1.0.0-SNAPSHOT</version>
      </dependency>
      <!-- OAuth Server 版本管理 -->
      <dependency>
        <groupId>com.tiny</groupId>
        <artifactId>tiny-oauth-server</artifactId>
        <version>${project.version}</version>
      </dependency>
      <!-- OAuth Client 版本管理 -->
      <dependency>
        <groupId>com.tiny</groupId>
        <artifactId>tiny-oauth-client</artifactId>
        <version>${project.version}</version>
      </dependency>
      <!-- OAuth Resource 版本管理 -->
      <dependency>
        <groupId>com.tiny</groupId>
        <artifactId>tiny-oauth-resource</artifactId>
        <version>${project.version}</version>
      </dependency>
      <!-- Web 版本管理 -->
      <dependency>
        <groupId>com.tiny</groupId>
        <artifactId>tiny-web</artifactId>
        <version>${project.version}</version>
      </dependency>
      <!-- Common Exception 已合并到 tiny-oauth-server 内部，不再需要独立模块 -->

      <!-- 第三方依赖版本管理 -->
      <!-- MySQL Connector -->
      <dependency>
        <groupId>com.mysql</groupId>
        <artifactId>mysql-connector-j</artifactId>
        <version>9.6.0</version>
      </dependency>

      <!-- Jakarta Servlet API -->
      <dependency>
        <groupId>jakarta.servlet</groupId>
        <artifactId>jakarta.servlet-api</artifactId>
        <version>6.1.0</version>
      </dependency>

      <!-- Mockito 测试框架 -->
      <!-- 注意：mockito-core 和 mockito-junit-jupiter 已包含在 spring-boot-starter-test 中 -->
      <!-- 版本与 Spring Boot 3.5.10 BOM 管理的版本保持一致（5.17.0） -->
      <!-- 如果子模块需要显式添加 Mockito 依赖，使用以下版本 -->
      <!-- 注意：mockito-inline 仅在需要 mock final 类或静态方法时才需要 -->
      <!-- 如果不需要这些功能，可以移除 mockito-inline 依赖 -->
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>5.17.0</version>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-junit-jupiter</artifactId>
        <version>5.17.0</version>
      </dependency>
      <!-- mockito-inline 仅在需要 mock final 类或静态方法时使用 -->
      <!-- 如果阿里云仓库同步延迟，可以暂时注释掉，或使用 Maven Central 仓库 -->
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-inline</artifactId>
        <version>5.12.0</version>
      </dependency>

      <!-- AssertJ 断言库 -->
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>3.27.7</version>
      </dependency>

      <!-- Commons Codec -->
      <dependency>
        <groupId>commons-codec</groupId>
        <artifactId>commons-codec</artifactId>
        <version>1.17.1</version>
      </dependency>

      <!-- Java OTP -->
      <dependency>
        <groupId>com.eatthepath</groupId>
        <artifactId>java-otp</artifactId>
        <version>0.4.0</version>
      </dependency>

      <!-- ZXing 二维码库 -->
      <dependency>
        <groupId>com.google.zxing</groupId>
        <artifactId>core</artifactId>
        <version>3.5.3</version>
      </dependency>
      <dependency>
        <groupId>com.google.zxing</groupId>
        <artifactId>javase</artifactId>
        <version>3.5.3</version>
      </dependency>

      <!-- Camunda BOM -->
      <dependency>
        <groupId>org.camunda.bpm</groupId>
        <artifactId>camunda-bom</artifactId>
        <version>7.24.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- <dependency>
        <groupId>org.apache.fesod</groupId>
        <artifactId>fesod-bom</artifactId>
        <version>${fesod.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency> -->

      <!-- 项目自己再钉一次 fesod-sheet 的版本，确保稳定 -->
      <dependency>
        <groupId>org.apache.fesod</groupId>
        <artifactId>fesod-sheet</artifactId>
        <version>${fesod.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <!-- Spring Boot 插件版本统一 -->
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <version>${spring-boot.version}</version>
        </plugin>

        <!-- Maven Compiler 插件 -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
          <configuration>
            <parameters>true</parameters>
            <release>${maven.compiler.release}</release>
          </configuration>
        </plugin>

        <!-- JaCoCo 插件 -->
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>0.8.12</version>
        </plugin>
        <!-- Maven Surefire 插件 -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.1</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.12</version>
        <executions>
          <execution>
            <id>aggregate-report</id>
            <phase>verify</phase>
            <goals>
              <goal>report-aggregate</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <!-- 依赖仓库配置：优先使用阿里云，备用 Maven Central -->
  <repositories>
      <!-- Apache Releases 仓库（用于 Apache 项目及孵化项目，如 Fesod） -->
    <repository>
      <id>apache-releases</id>
      <name>Apache Releases Repository</name>
      <url>https://repository.apache.org/content/repositories/releases/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <!-- 阿里云 Maven 仓库（优先） -->
    <repository>
      <id>aliyun</id>
      <name>Aliyun Maven Repository</name>
      <url>https://maven.aliyun.com/repository/central</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <!-- Maven Central 仓库（备用） -->
    <repository>
      <id>central</id>
      <name>Maven Central Repository</name>
      <url>https://repo1.maven.org/maven2</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>

  <!-- 插件仓库配置：优先使用阿里云，备用 Maven Central -->
  <pluginRepositories>
    <!-- 阿里云 Maven 仓库（优先） -->
    <pluginRepository>
      <id>aliyun-plugin</id>
      <name>Aliyun Maven Plugin Repository</name>
      <url>https://maven.aliyun.com/repository/central</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </pluginRepository>
    <!-- Maven Central 仓库（备用） -->
    <pluginRepository>
      <id>central</id>
      <name>Maven Central Repository</name>
      <url>https://repo1.maven.org/maven2</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>
</project>
